--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -45,6 +45,7 @@ body {
 .main-nav a {
   font-weight: bold;
   color: #2c3e50;
+  padding-left: 5px;
 }
 
 .main-nav a.router-link-exact-active {
@@ -54,6 +55,9 @@ body {
 .main-nav-item {
   text-decoration: none;
   margin-right: 0.5rem;
+}
+.main-nav-item i {
+  margin-right: 5px;
 }
 
 .main-nav-item:hover {
@@ -172,6 +176,7 @@ body {
   margin: 0 auto;
   margin-top: 3rem;
   padding: 2rem;
+  flex-grow: 1;
 }
 
 .sign-in-icon {
@@ -207,11 +212,18 @@ body {
   justify-content: center;
   border-top: 2px solid #ccc;
   padding: 2rem 0 1.5rem;
+  margin: 0;
 }
 
 .footer-text {
   margin: 0;
   padding: 0;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  background-color: #12002b;
 }
 
 .account {
@@ -261,7 +273,8 @@ body {
 
 .header {
   color: #fff;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
+  padding-top: 1rem;
 }
 
 .transaction-button {
@@ -288,4 +301,72 @@ body {
   .transaction-button {
     width: 200px;
   }
+}
+
+.styled-form {
+  max-width: 400px;
+  margin: 1.5rem auto;
+  padding: 1.5rem;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background-color: #fafafa;
+  color: #000;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+  font-family: sans-serif;
+}
+.form-group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+
+.form-group label {
+  flex: 1;
+  margin-bottom: 0; /* Remove bottom margin */
+  margin-right: 1rem;
+  font-weight: 600;
+  color: #333;
+  text-align: right;
+}
+
+.form-group input {
+  flex: 2;
+  padding: 0.6rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 1rem;
+  box-sizing: border-box;
+  transition: border 0.3s ease;
+}
+
+.form-group input:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+.no-edit {
+  background-color: #f0f0f0;
+  color: #777;
+  cursor: not-allowed;
+}
+
+.form-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.75rem;
+}
+
+.form-actions button {
+  flex: 1;
+  padding: 8px;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-top: 1rem;
+  border-color: #00bc77;
+
+  background-color: #00bc77;
+  color: #fff;
+  cursor: pointer;
+  max-width: 120px;
 }
