--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -13,8 +13,21 @@ body {
   min-height: 100vh;
 }
 
+/* #root {
+  height: 100%;
+  margin: 0;
+} */
+
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .bg-dark {
@@ -176,7 +189,7 @@ body {
   margin: 0 auto;
   margin-top: 3rem;
   padding: 2rem;
-  flex-grow: 1;
+  margin-bottom: inherit;
 }
 
 .sign-in-icon {
@@ -223,7 +236,6 @@ body {
 .main {
   display: flex;
   flex-direction: column;
-  background-color: #12002b;
 }
 
 .account {
